# MS-CFB

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.py  python-package.yml  python-publish.yml
src/ms_cfb/: __main__.py  ole_file.py
src/ms_cfb/Models/: ms_cfb.py
src/ms_cfb/Models/DataStreams/: array_stream.py  directory_stream.py  file_array.py  file_stream.py  number_stream.py  stream_base.py
src/ms_cfb/Models/Directories/: directory.py  directory_factory.py  root_directory.py  storage_directory.py  stream_directory.py
src/ms_cfb/Models/FileChains/: sector_chain.py
src/ms_cfb/Models/Filesystems/: fat_filesystem.py  filesystem_base.py  minifat_filesystem.py
src/ms_dtyp/: filetime.py
tests/: example.yml  test_fat_filesystem.py  test_fat_filesystem.pyt  test_olefile.py
tests/Functional/: min_file.py  test_example_file.py  test_example_file_main.py  test_min_file.py  test_min_file_main.py  test_min_file_main.pyt  test_min_file_v4.py  test_min_file_v4_main.py  test_min_file_v4_main.pyt
tests/Unit/: test_olefile.py
tests/Unit/DataStreams/: test_file_array.py  test_file_stream.py
tests/Unit/Directories/: test_directory_factory.py  test_root_directory.py  test_storage_directory.py  test_stream_directory.py
tests/Unit/FileChains/: test_minifat_chain.pyt  test_sector_chain.py
tests/Unit/Filesystems/: test_fat_filesystem.py  test_minifat_filesystem.py
tests/ms_dtyp/: test_filetime.py
