[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ms_cfb"
version = "0.0.1"
authors = [
  { name="Kevin Nowaczyk", email="beakerboy99@yahoo.com" },
]
description = "Microsoft Compound File Binary File Format."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'PyYAML',
  'red-black-tree-mod'
]
[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-cov',
  'pytest-mock',
  'coveralls',
  'pep8-naming',
  'flake8-annotations'
]
[project.urls]
"Homepage" = "https://github.com/Beakerboy/MS-CFB"
"Bug Tracker" = "https://github.com/Beakerboy/MS-CFB/issues"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
